--- a/index.html
+++ b/index.html
@@ -20,15 +20,32 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="assets/css/types.css">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="assets/css/booststrap/bootstrap.min.css">
 
 </head>
 
 <body>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalDetails">
+        Launch demo modal
+    </button>
+    <!-- Modal -->
+    <div class="modal fade" id="modalDetails" tabindex="-1" aria-labelledby="modalDetails" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="bodyModalDetails">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <section class="container section-pokemon bg-light rounded-3">
         <!-- <h2 class="fw-bold m-5 w-100 text-center">Pokedex</h2> -->
 
@@ -51,17 +68,15 @@
             </button>
         </div>
     </section>
+    <!-- js Jquery -->
+    <script src="assets/js/jquery/jquery.min.js"></script>
+    <!-- js Bootstrap -->
+    <script src="assets/js/bootstrap/bootstrap.min.js"></script>
 
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
-
-    <!-- js Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
 </body>
 
 </html>
